Added a cancel button for replying and editing.

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
     <form id="message-form">
       <span id="replyingtotext">Replying</span>
       <span id="editingmsgtext">Editing a message </span>
+      <button id="cancelreplyoredit">Cancel</button>
       <input id="message" type="text" placeholder="Type a message..." maxlength="2000">
       <span id="char-count"></span>
       <span id="ratelimitalert">Whoa! You're going too fast! Slow down a bit and try again.</span>
