Added SAVING room settings (not loading yet)

--- a/public/index.html
+++ b/public/index.html
@@ -46,8 +46,8 @@
     <form id="circle-settings-form">
       <input id="circle-name" type="text" placeholder="Circle Name"></input>
       <input id="circle-description" type="text" placeholder="Circle Description"></input>
-      <input id="circle-icon" type="text" placeholder="Circle Icon (Emoji)"></input>
-      <button>Save</button>
+      <input id="circle-emoji" type="text" placeholder="Circle Icon (Emoji)"></input>
+      <button id="circlesettings-save-button">Save</button>
     </form>
   <script src="index.js"></script>
 </body>
