--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,8 @@
 
 <body>
   <div id="username-popup" style="display: none;">
-    <h2>Enter your username and select a Circle:</h2>
+    <h2>Welcome Back!</h2>
+    <p>Please enter your username and select a Circle.</p>
     <form id="username-form">
       <input id="username-input" type="text" placeholder="Username"></input>
       <select id="room-select"></select>
