Other small changes...

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,10 @@
   <div id="chat-window" style="display: none;">
     <button id="back-button">Back</button>
     <button id="room-settings">Room Settings</button>
-    <h2>Circle: <span id="current-room"></span></h2>
+    <div id="roomnameanddesc">
+    <h2 id="roomnam"><span id="current-room"></span></h2>
+    <h3 id="roomdesc"><span id="current-room-description"></span></h3>
+    </div>
     <ul id="messages"></ul>
     <form id="message-form">
       <span id="replyingtotext">Replying</span>
