--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,11 @@
       <input id="message" type="text" placeholder="Type a message..." maxlength="2000">
       <span id="char-count"></span>
       <span id="ratelimitalert">Whoa! You're going too fast! Slow down a bit and try again.</span>
-      <button id="sendbtn">Send</button>
+      <button id="sendbtn">
+        <svg id="Group_10235" data-name="Group 10235" xmlns="http://www.w3.org/2000/svg" width="18" height="13" viewBox="0 0 173.64 149.826">
+          <path id="Path_8370" data-name="Path 8370" d="M163.3,94.537,23.2,36.4A16.767,16.767,0,0,0,.529,56.035L13,104.936H74.053a5.087,5.087,0,0,1,0,10.175H13l-12.47,48.9A16.768,16.768,0,0,0,23.2,183.643l140.1-58.132a16.767,16.767,0,0,0,0-30.974Z" transform="translate(-0.001 -35.111)"/>
+        </svg>        
+      </button>
     </form>
     <audio id="notification" src="/notification.mp3"></audio>
   </div>
