--- a/public/index.html
+++ b/public/index.html
@@ -12,28 +12,32 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="index.css" media="screen and (min-width: 768px)">
-    <link rel="stylesheet" href="index-mobile.css" media="screen and (max-width: 767px)">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="index.css" media="screen and (min-width: 768px)">
+  <link rel="stylesheet" href="index-mobile.css" media="screen and (max-width: 767px)">
 </head>
 
 <body>
   <div id="username-popup">
     <h2>Welcome Back!</h2>
-    <p>Please enter your username and select a Circle.</p>
+    <p>Please enter your username to log in.</p>
     <form id="username-form">
       <input id="username-input" type="text" placeholder="Username"></input>
-      <select id="room-select"></select>
-      <input id="create-room-name" type="text" placeholder="Circle Name"></input>
-      <button type="submit">Submit</button>
+      <button type="submit">Login</button>
     </form>
   </div>
   <div id="chat-window">
-    <button id="back-button">Back</button>
-    <button id="room-settings">Room Settings</button>
+    <div id="room-settings-and-back">
+      <button id="back-button">Logout</button>
+      <button id="room-settings">Room Settings</button>
+    </div>
+    <div id="circle-selector">
+      <ul class="circle-grid">
+      </ul>
+    </div>
     <div id="roomnameanddesc">
-    <h2 id="roomnam"><span id="current-room"></span></h2>
-    <h3 id="roomdesc"><span id="current-room-description"></span></h3>
+      <h2 id="roomnam"><span id="current-room"></span></h2>
+      <h3 id="roomdesc"><span id="current-room-description"></span></h3>
     </div>
     <ul id="messages"></ul>
     <form id="message-form">
@@ -44,9 +48,12 @@
       <span id="char-count"></span>
       <span id="ratelimitalert">Whoa! You're going too fast! Slow down a bit and try again.</span>
       <button type="submit" id="sendbtn">
-        <svg id="Group_10235" data-name="Group 10235" xmlns="http://www.w3.org/2000/svg" width="18" height="13" viewBox="0 0 173.64 149.826">
-          <path id="Path_8370" data-name="Path 8370" d="M163.3,94.537,23.2,36.4A16.767,16.767,0,0,0,.529,56.035L13,104.936H74.053a5.087,5.087,0,0,1,0,10.175H13l-12.47,48.9A16.768,16.768,0,0,0,23.2,183.643l140.1-58.132a16.767,16.767,0,0,0,0-30.974Z" transform="translate(-0.001 -35.111)"/>
-        </svg>        
+        <svg id="Group_10235" data-name="Group 10235" xmlns="http://www.w3.org/2000/svg" width="18" height="13"
+          viewBox="0 0 173.64 149.826">
+          <path id="Path_8370" data-name="Path 8370"
+            d="M163.3,94.537,23.2,36.4A16.767,16.767,0,0,0,.529,56.035L13,104.936H74.053a5.087,5.087,0,0,1,0,10.175H13l-12.47,48.9A16.768,16.768,0,0,0,23.2,183.643l140.1-58.132a16.767,16.767,0,0,0,0-30.974Z"
+            transform="translate(-0.001 -35.111)" />
+        </svg>
       </button>
     </form>
     <audio id="notification" src="/notification.mp3"></audio>
@@ -60,7 +67,10 @@
       <input id="circle-emoji" type="text" placeholder="Circle Icon (Emoji)"></input>
       <button type="button" id="circlesettings-save-button">Save</button>
     </form>
-  <script src="index.js"></script>
+    <script src="https://unpkg.com/@popperjs/core@2"></script>
+    <script src="https://unpkg.com/tippy.js@6"></script>
+    <script src="https://cdn.jsdelivr.net/npm/showdown@2.1.0/dist/showdown.min.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
