Experiments tab (not working)

--- a/horizon/index.html
+++ b/horizon/index.html
@@ -98,17 +98,22 @@
     <p>These are some secret experiments that we're working on. They're not ready for prime time yet, but you can try them out if you want!</p>
     <div id="secret-experiments-list">
       <div class="secret-experiment">
-        <h3>New UI</h3>
-        <p>Enables the new neeter UI.</p>
+        <h3>2023-05-horizon</h3>
+        <p>Client-side UI Experiment</p>
         <input type="checkbox" id="neeter-new-ui-toggle" />
-        <label for="neeter-new-ui-toggle">Enable New UI</label>
+        <label for="neeter-new-ui-toggle">Enable Experiment</label>
       </div>
       <div class="secret-experiment">
-        <h3>Content Moderation</h3>
-        <p>Enables Messages Moderation.</p>
+        <h3>2023-05-moderation</h3>
+        <p>Server-side Functionality Experiment</p>
         <input type="checkbox" id="message-moderation-checkbox" />
-        <label for="message-moderation-checkbox">Enable Message Moderation</label>
+        <label for="message-moderation-checkbox">Enable Experiment</label>
       </div>
+      <div class="secret-experiment">
+        <h3>2023-05-caffeine</h3>
+        <p>Client-side UI Experiment</p>
+        <input type="checkbox" id="neeter-coffee-subscription-checkbox" />
+        <label for="neeter-coffee-subscription-checkbox">Enable Experiment</label>
     <p></p>
     <button id="secret-experiments-close-button">Close</button>
   </div>
