--- a/horizon/index.html
+++ b/horizon/index.html
@@ -25,8 +25,8 @@
       <button id="register-button">Register</button>
       <button id="login-button">Login</button>
       <form id="register-form">
-        <input id="reg-email-input" type="text" placeholder="Email"></input>
-        <input id="reg-username-input" type="text" placeholder="Username"></input>
+        <input id="reg-email-input" type="text" autocomplete="off" placeholder="Email"></input>
+        <input id="reg-username-input" type="text" autocomplete="off" placeholder="Username"></input>
         <input id="reg-password-input" type="password" placeholder="Password"></input>
         <button type="submit">Sign Up</button>
         <button type="button" id="cancel-register-button">Log In Instead</button>
@@ -57,7 +57,7 @@
       <span id="replyingtotext">Replying</span>
       <span id="editingmsgtext">Editing a message </span>
       <button type="button" id="cancelreplyoredit">Cancel</button>
-      <input id="message" type="text" placeholder="Type a message..." maxlength="2000">
+      <input id="message" type="text" autocomplete="off" placeholder="Type a message..." maxlength="2000">
       <span id="char-count"></span>
       <span id="ratelimitalert">Whoa! You're going too fast! Slow down a bit and try again.</span>
       <button type="submit" id="sendbtn">
@@ -98,9 +98,9 @@
     <button id="circlesettings-back-button">Close Settings</button>
     <h2>Circle Settings</h2>
     <form id="circle-settings-form">
-      <input id="circle-name" type="text" placeholder="Circle Name"></input>
-      <input id="circle-description" type="text" placeholder="Circle Description"></input>
-      <input id="circle-emoji" type="text" placeholder="Circle Icon (Emoji)"></input>
+      <input id="circle-name" autocomplete="off" type="text" placeholder="Circle Name"></input>
+      <input id="circle-description" type="text" autocomplete="off" placeholder="Circle Description"></input>
+      <input id="circle-emoji" type="text" autocomplete="off" placeholder="Circle Icon (Emoji)"></input>
       <button type="button" id="circlesettings-save-button">Save</button>
     </form>
     <script src="https://unpkg.com/@popperjs/core@2"></script>
