Added much more auth style, almost finished.

--- a/horizon/login/index.html
+++ b/horizon/login/index.html
@@ -39,6 +39,8 @@
         </div>
     </div>
     <div class="register-form">
+        <h1>Hello There!</h1>
+        <p>Welcome to Neeter! Please enter your details to create an account.</p>
         <div class="email">
             <div class="sec-2">
                 <input id="reg-email-input" type="email" name="email" placeholder="Email Address" />
@@ -53,7 +55,7 @@
 
         <div class="password">
             <div class="sec-2">
-                <input id="reg-password-input" type="password" name="password" class="pas" placeholder="Password" />
+                <input id="reg-password-input" type="password" name="password" class="password" placeholder="Password" />
             </div>
         </div>
 
