Disabled forgot password button until I code it

--- a/horizon/login/index.html
+++ b/horizon/login/index.html
@@ -36,8 +36,8 @@
         <button class="login" id="login-button">Login</button>
 
         <div class="footer">
-            <span id="sign-up-instead">Sign up Instead</span>
-            <span>Forgot Your Password?</span>
+            <span id="sign-up-instead" class="change-login-action">Sign up Instead</span>
+            <span id="forgot-password">Forgot Your Password?</span>
         </div>
     </div>
     <div id="register-form">
@@ -64,8 +64,8 @@
         <button id="register-button" class="register">Register</button>
 
         <div class="footer">
-            <span id="sign-in-instead">Sign in Instead</span>
-            <span>Forgot Your Password?</span>
+            <span id="sign-in-instead" class="change-login-action">Sign in Instead</span>
+            <span id="forgot-password">Forgot Your Password?</span>
         </div>
     </div>
     <script type="module" src="/login/index.js"></script>
