Added link formatting and safety

--- a/horizon/index.html
+++ b/horizon/index.html
@@ -108,6 +108,13 @@
     </div>
     </div>
   </div>
+  <div id="confirmDialog" class="modal">
+    <div class="modal-content">
+      <p>You are about to leave Neeter and go to an external website. Are you sure you want to continue?</p>
+      <button id="confirmButton" class="modal-button">Confirm</button>
+      <button id="closemodal" class="closemodal">Cancel</button>
+    </div>
+  </div>
 </body>
 
 </html>
