Small changes on ToS.

--- a/horizon/small-terms/index.html
+++ b/horizon/small-terms/index.html
@@ -13,30 +13,22 @@
         rel="stylesheet">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 </head>
-
 <body>
     <h1>Neeter Terms of Service (Simple Version)</h1>
     <p>Welcome to Neeter! By using Neeter, you agree to follow these rules:</p>
     <ul>
-        <li>You must be at least 13 years old to use Neeter. If you're under 18 years old, you need your parent's or
-            guardian's permission to use Neeter.</li>
-        <li>You're responsible for any content you post on Neeter, including photos, videos, and text. Don't post
-            anything that's illegal, harmful, or offensive. Content that is 18+ or NSFW is also not allowed.</li>
-        <li>You can't use Neeter to harass, harm, or impersonate others. Don't send spam or collect personal information
-            from other users without their permission.</li>
-        <li>Neeter owns the content on its platform. Don't copy or use it without permission.</li>
-        <li>Don't post malware or any content that might harm a computer or other device on Neeter.</li>
-        <li>Neeter is not responsible for any content posted on decentralized hubs that is related to or mentions
-            Neeter.</li>
-        <li>Neeter will collect, process, and store your personal data in accordance with Spanish and EU data protection
-            laws.</li>
-        <li>Neeter doesn't guarantee that its services will be uninterrupted, secure, or error-free, and it doesn't
-            guarantee the accuracy or reliability of any information obtained through its services.</li>
-        <li>Neeter is not responsible for any damages or losses resulting from your use of its services.</li>
-        <li>Neeter may terminate your account at any time if you violate these rules.</li>
-        <li>Neeter may change these rules at any time, so check back periodically.</li>
+    <li>You must be at least 13 years old to use Neeter. If you're under 18 years old, you need your parent's or guardian's permission to use Neeter.</li>
+    <li>You're responsible for any content you post on Neeter, including photos, videos, and text. Don't post anything illegal, harmful, or offensive. Content that is 18+ or NSFW is also not allowed.</li>
+    <li>You can't use Neeter to harass, harm, or impersonate others. Don't send spam or collect personal information from other users without their permission.</li>
+    <li>Neeter owns the content on its platform. Don't copy or use it without permission.</li>
+    <li>Don't post malware or any content that might harm a computer or other device on Neeter.</li>
+    <li>Neeter is not responsible for any content posted on decentralized hubs that are related to or mention Neeter.</li>
+    <li>Neeter will collect, process, and store your data in accordance with Spanish and EU data protection laws.</li>
+    <li>Neeter doesn't guarantee that its services will be uninterrupted, secure, or error-free, and it doesn't guarantee the accuracy or reliability of any information obtained through its services.</li>
+    <li>Neeter is not responsible for any damages or losses resulting from your use of its services.</li>
+    <li>Neeter may terminate your account anytime if you violate these rules.</li>
+    <li>Neeter may change these rules at any time, so check back periodically.</li>
     </ul>
     <p>If you have any questions or comments about these rules, please contact us at support@neeter.co.</p>
-</body>
-
+    </body>
 </html>
