Some small changes

--- a/horizon/index.html
+++ b/horizon/index.html
@@ -36,7 +36,7 @@
       <span id="replyingtotext">Replying</span>
       <span id="editingmsgtext">Editing a message </span>
       <button type="button" id="cancelreplyoredit">Cancel</button>
-      <input id="message" type="text" autocomplete="off" placeholder="Type a message..." maxlength="2000">
+      <input id="message" type="text" placeholder="Type a message..." maxlength="2000">
       <span id="char-count"></span>
       <span id="ratelimitalert">Whoa! You're going too fast! Slow down a bit and try again.</span>
       <button type="submit" id="sendbtn">
