Fixed an incorrect name

--- a/horizon/index.html
+++ b/horizon/index.html
@@ -28,7 +28,7 @@
       </ul>
     </div>
     <div id="roomnameanddesc">
-      <h2 id="roomnam"><span id="current-room"></span></h2>
+      <h2 id="roomname"><span id="current-room"></span></h2>
       <h3 id="roomdesc"><span id="current-room-description"></span></h3>
     </div>
     <ul id="messages"></ul>
