Earthy is being added...

--- a/horizon/index.html
+++ b/horizon/index.html
@@ -37,7 +37,7 @@
     <ul id="messages">
     </ul>
     <form id="message-form">
-      <h1 id="title">l10n.js demo</h1>
+      <!-- <h1 id="title">l10n.js demo</h1> -->
       <span id="replyingtotext">Replying</span>
       <span id="editingmsgtext">Editing a message </span>
       <button type="button" id="cancelreplyoredit">Cancel</button>
