--- a/horizon/index.html
+++ b/horizon/index.html
@@ -24,7 +24,7 @@
   <div id="chat-window">
     <div id="room-settings-and-back">
       <button id="back-button">Logout</button>
-      <button id="room-settings">Room Settings</button>
+      <button id="room-settings">Circle Settings</button>
     </div>
     <div id="circle-selector">
       <ul class="circle-grid">
