--- a/horizon/index.html
+++ b/horizon/index.html
@@ -13,8 +13,7 @@
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="index.css" media="screen and (min-width: 768px)">
-  <link rel="stylesheet" href="index-mobile.css" media="screen and (max-width: 767px)">
+  <link rel="stylesheet" href="index.css">
   <script type="text/javascript" src="/js-tools/json2.js"></script>
   <script type="text/javascript" src="/js-tools/l10n.js"></script>
   <script type="text/javascript" src="langs.js"></script>
