--- a/horizon/index.html
+++ b/horizon/index.html
@@ -56,7 +56,7 @@
           </svg>
         </button>
         <button type="button" id="editbtnoriginal">
-          <svg fill="#000000" version="1.1" id="Edit" xmlns="http://www.w3.org/2000/svg" width="18" height="13"
+          <svg fill="#000000" version="1.1" xmlns="http://www.w3.org/2000/svg" width="18" height="13"
             xmlns:xlink="http://www.w3.org/1999/xlink" width="800px" height="800px" viewBox="0 0 528.899 528.899"
             xml:space="preserve">
             <g>
