More UI changes

--- a/horizon/horizon-beta/things.html
+++ b/horizon/horizon-beta/things.html
@@ -67,3 +67,18 @@
                      </div>
                     </div>
                    </div>
+
+                   ----------------------------------------------------
+
+                     <input type="text" placeholder="Search Messages">
+
+                   ----------------------------------------------------
+
+                     <div class="detail-change">
+                       UI Colour (beta)
+                       <div class="colors">
+                         <div class="color green selected" data-color="green"></div>
+                         <div class="color purple" data-color="purple"></div>
+                         <div class="color orange" data-color="orange"></div>
+                       </div>
+                     </div>
