--- a/horizon/index.html
+++ b/horizon/index.html
@@ -1,106 +1,138 @@
 <!DOCTYPE html>
-<html lang="en-UK">
+<html lang="en">
 
 <head>
-  <title>Neeter</title>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Neeter</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+  <link rel="stylesheet" href="./style.css">
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet">
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="index.css">
-  <script type="text/javascript" src="/js-tools/json2.js"></script>
-  <script type="text/javascript" src="/js-tools/l10n.js"></script>
-  <script type="text/javascript" src="langs.js"></script>
+
 </head>
 
 <body>
-  <div id="chat-window">
-    <div id="room-settings-and-back">
-      <button id="back-button">Logout</button>
-      <button id="room-settings">Circle Settings</button>
-    </div>
-    <div id="circle-selector">
-      <ul class="circle-grid">
-      </ul>
-    </div>
-    <div id="roomnameanddesc">
-      <h2 id="roomname"><span id="current-room"></span></h2>
-      <h3 id="roomdesc"><span id="current-room-description"></span></h3>
-    </div>
-    <ul id="messages">
-    </ul>
-    <form id="message-form">
-      <span id="replyingtotext">Replying</span>
-      <span id="editingmsgtext">Editing a message </span>
-      <button type="button" id="cancelreplyoredit">Cancel</button>
-      <input id="message" type="text" name="messageinput" placeholder="Type a message..." maxlength="2000">
-      <span id="char-count"></span>
-      <span id="ratelimitalert">Whoa! You're going too fast! Slow down a bit and try again.</span>
-      <button type="submit" id="sendbtn">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="18" height="13">
-          <path
-            d="M498.1 5.6c10.1 7 15.4 19.1 13.5 31.2l-64 416c-1.5 9.7-7.4 18.2-16 23s-18.9 5.4-28 1.6L284 427.7l-68.5 74.1c-8.9 9.7-22.9 12.9-35.2 8.1S160 493.2 160 480V396.4c0-4 1.5-7.8 4.2-10.7L331.8 202.8c5.8-6.3 5.6-16-.4-22s-15.7-6.4-22-.7L106 360.8 17.7 316.6C7.1 311.3 .3 300.7 0 288.9s5.9-22.8 16.1-28.7l448-256c10.7-6.1 23.9-5.5 34 1.4z" />
-        </svg>
-      </button>
-      <div id="buttonscontainer">
+  <div class="app">
+    <div class="header">
+      <div class="logo">
       </div>
-    </form>
-    <audio id="notification" src="/notification.mp3"></audio>
-  </div>
-  <div id="circlesettings-window">
-    <button id="circlesettings-back-button">Close Settings</button>
-    <h2 id="circlesettings-title">Circle Settings</h2>
-    <form id="circle-settings-form">
-      <input id="circle-name" autocomplete="off" name="circlename" type="text" placeholder="Circle Name"></input>
-      <input id="circle-description" type="text" name="circledescription" autocomplete="off" placeholder="Circle Description"></input>
-      <input id="circle-emoji" type="text" name="circleemoji" autocomplete="off" placeholder="Circle Icon (Emoji)"></input>
-      <button type="button" id="circlesettings-save-button">Save</button>
-    </form>
-    <script src="https://unpkg.com/@popperjs/core@2"></script>
-    <script src="https://unpkg.com/tippy.js@6"></script>
-    <script src="https://cdn.jsdelivr.net/npm/showdown@2.1.0/dist/showdown.min.js"></script>
-    <script type="module" src="index.js"></script>
-  </div>
-  <div id="secret-experiments-popup">
-    <h2>Secret Experiments</h2>
-    <p>These are some secret experiments that we're working on. They're not ready for prime time yet, but you can try
-      them out if you want!</p>
-    <div id="secret-experiments-list">
-      <div class="secret-experiment">
-        <h3>2023-05-horizon</h3>
-        <p>Client-side UI Experiment</p>
-        <input type="checkbox" id="neeter-new-ui-toggle" />
-        <label for="neeter-new-ui-toggle">Enable Experiment</label>
-      </div>
-      <div class="secret-experiment">
-        <h3>2023-05-moderation</h3>
-        <p>Server-side Functionality Experiment</p>
-        <input type="checkbox" id="message-moderation-checkbox" />
-        <label for="message-moderation-checkbox">Enable Experiment</label>
-      </div>
-      <div class="secret-experiment">
-        <h3>2023-05-caffeine</h3>
-        <p>Client-side UI Experiment</p>
-        <input type="checkbox" id="neeter-coffee-subscription-checkbox" />
-        <label for="neeter-coffee-subscription-checkbox">Enable Experiment</label>
-        <p></p>
-        <button id="secret-experiments-close-button">Close</button>
+      <div class="user-settings">
+        <div class="dark-light">
+          <svg viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5" fill="none" stroke-linecap="round"
+            stroke-linejoin="round">
+            <path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z" />
+          </svg>
+        </div>
+        <div class="settings">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+            <circle cx="12" cy="12" r="3" />
+            <path
+              d="M19.4 15a1.65 1.65 0 00.33 1.82l.06.06a2 2 0 010 2.83 2 2 0 01-2.83 0l-.06-.06a1.65 1.65 0 00-1.82-.33 1.65 1.65 0 00-1 1.51V21a2 2 0 01-2 2 2 2 0 01-2-2v-.09A1.65 1.65 0 009 19.4a1.65 1.65 0 00-1.82.33l-.06.06a2 2 0 01-2.83 0 2 2 0 010-2.83l.06-.06a1.65 1.65 0 00.33-1.82 1.65 1.65 0 00-1.51-1H3a2 2 0 01-2-2 2 2 0 012-2h.09A1.65 1.65 0 004.6 9a1.65 1.65 0 00-.33-1.82l-.06-.06a2 2 0 010-2.83 2 2 0 012.83 0l.06.06a1.65 1.65 0 001.82.33H9a1.65 1.65 0 001-1.51V3a2 2 0 012-2 2 2 0 012 2v.09a1.65 1.65 0 001 1.51 1.65 1.65 0 001.82-.33l.06-.06a2 2 0 012.83 0 2 2 0 010 2.83l-.06.06a1.65 1.65 0 00-.33 1.82V9a1.65 1.65 0 001.51 1H21a2 2 0 012 2 2 2 0 01-2 2h-.09a1.65 1.65 0 00-1.51 1z" />
+          </svg>
+        </div>
       </div>
     </div>
-  </div>
-  <div id="confirmDialog" class="modal">
-    <div class="modal-content">
-      <p id="leavingmodal">You are about to leave Neeter and go to an external website. Are you sure you want to continue?</p>
-      <button id="confirmLeaveNeeterButton" class="modal-button">Confirm</button>
-      <button id="closeLeaveNeeterModal" class="closeLeaveNeeterModal">Cancel</button>
-    </div>
-  </div>
+    <div class="wrapper">
+      <div class="conversation-area">
+        <button class="add"></button>
+        <div class="overlay"></div>
+      </div>
+      <div class="chat-area">
+        <div class="chat-area-header">
+          <div class="chat-area-title">Loading Circle...</div>
+          <div class="chat-area-group">
+          </div>
+        </div>
+        <div class="chat-area-main">
+        </div>
+        <form id="chat-area-footer">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-paperclip">
+            <path
+              d="M21.44 11.05l-9.19 9.19a6 6 0 01-8.49-8.49l9.19-9.19a4 4 0 015.66 5.66l-9.2 9.19a2 2 0 01-2.83-2.83l8.49-8.48" />
+          </svg>
+          <input type="text" id="message-input" placeholder="Type something here..." />
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-smile">
+            <circle cx="12" cy="12" r="10" />
+            <path d="M8 14s1.5 2 4 2 4-2 4-2M9 9h.01M15 9h.01" />
+          </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+            stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+            class="feather feather-send" id="sendbtn">
+            <line x1="22" y1="2" x2="11" y2="13" />
+            <polygon points="22 2 15 22 11 13 2 9 22 2" />
+          </svg>
+        </form>
+      </div>
+      <div class="detail-area">
+        <div class="detail-area-header">
+          <div class="msg-profile group">
+            <img class="circle-image"
+              src="https://api.dicebear.com/6.x/initials/svg?seed=?&scale=80&backgroundType=gradientLinear&backgroundColor=808080&fontWeight=400&radius=50"
+              alt="" />
+          </div>
+          <div class="detail-title">Loading Circle...</div>
+          <div class="detail-subtitle">Loading Circle description...</div>
+          <div class="detail-buttons">
+            <button class="detail-button" id="invite-users">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"
+                class="feather feather-user-plus">
+                <path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2" />
+                <circle cx="8.5" cy="7" r="4" />
+                <line x1="20" y1="8" x2="20" y2="14" />
+                <line x1="23" y1="11" x2="17" y2="11" />
+              </svg>
+            </button>
+            <button class="detail-button" id="circle-search">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"
+                class="feather feather-search">
+                <circle cx="11" cy="11" r="8" />
+                <line x1="21" y1="21" x2="16.65" y2="16.65" />
+              </svg>
+            </button>
+            <button class="detail-button" id="circle-notifications">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"
+                class="feather feather-bell">
+                <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9" />
+                <path d="M13.73 21a2 2 0 0 1-3.46 0" />
+              </svg>
+            </button>
+            <button class="detail-button" id="circle-settings">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"
+                class="feather feather-settings">
+                <circle cx="12" cy="12" r="3" />
+                <path
+                  d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z" />
+              </svg>
+            </button>
+          </div>
+        </div>
+        <div class="detail-changes">
+          <div class="detail-change">
+            Members
+            <button class="members-minimize">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                class="feather feather-chevron-up">
+                <polyline points="18 15 12 9 6 15" />
+              </svg>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="search-popup">
+        <input class="search-noresults" id="searchbar" type="text" placeholder="Search">
+        <div id="searchresults">
+        </div>
+      </div>
+      <script type="module" src="./script.js"></script>
+
 </body>
 
 </html>
