--- a/horizon/index.html
+++ b/horizon/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="./style.css">
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://unpkg.com/tippy.js@6"></script>
+  <script src="https://cdn.jsdelivr.net/npm/showdown@2.1.0/dist/showdown.min.js"></script>
 
 </head>
 
